@@ -3,6 +3,8 @@
 
 *	Add continued fraction type of a loop
 
+*	Check rational powers in mod mode to work correctly
+
 *	Check modular arithmetic to be correct (such as: "expr mod n"),
         that is, when do we mod is the question.
 
