@@ -521,3 +521,7 @@ Denominator (3i/7+1)						7
 (-1)^2								1
 a=1;-a^2							-1
 a=1;(-a)^2							1
+(78125^(1/7))/101						5/101
+(78125^(2/7))/101						25/101
+((78125/(2^7))^(2/7))/101					25/404
+((1/78125)^(2/7))						1/25
