@@ -14,6 +14,8 @@ Changes to 0.5.3
 * Add (<expr>)i operator macro which will multiply <expr> by i
 * Negation parsing changed -1^k still parses as (-1)^k but -a^k parses as
   -(a^k) (where a is anything but a number
+* Rational powers now return integers if possible, and so the
+  SymbolicSquareRoot and SymbolicNthRoot functions are not neccessary
 * Nicer printing of complex numbers
 * Printing fixes
 * Fractions printed nicely in troff and latex mode
@@ -22,7 +24,8 @@ Changes to 0.5.3
   RemoveFactor, Gravity (the gravitational constant), EulerConstant,
   FermatFactorization, IsGaussInteger, IsPositiveInteger, MillerRabinTest
 * Use MillerRabinTest in IsPrime adding a config parameter for this
-* Remove SymbolicSquareRoot (sqrt is the same thing)
+* Remove SymbolicSquareRoot, SymbolicNthRoot (sqrt and rational powers
+  is the same thing)
 * Add some new aliases for a few functions
 * Better EulerPhi implementation
 * Fix Factors
@@ -30,8 +33,6 @@ Changes to 0.5.3
 * factorial now binds more closely then power
 * Allow more matlab like notation of getting whole rows/columns
   (such as foo@(2,:))
-* Rational powers with denominators of 2, 4, 8 or 16 now return integers
-  if possible
 * Add an Edit menu with Copy and Paste
 * Add "Really want to quit" dialog and allow quitting while calculations are
   running
